# LocketNFC

./: .gitignore  LocketNFC HW.graphml  LocketNFC.aedt
CubeMx/: CubeMx.ioc
EspBtSrc_fw/: .cproject  .project  sdkconfig  sdkconfig.old
EspBtSrc_fw/main/: CMakeLists.txt  EvtMsgIDs.h  EvtQMain.h  RetVal.h  bt_app_core.c  config.h  kl_bt.c  kl_bt.h  kl_uart.c  kl_uart.h  main.c
LocketNfcAntPcb/: .LocketNfcAntPcb.fsxview  LocketNfcAntPcb.fsproj  LocketNfcAntPcb.fsx  LocketNfcAntPcb.kicad_pcb  LocketNfcAntPcb.kicad_prl  LocketNfcAntPcb.kicad_pro  LocketNfcAntPcb.kicad_sch  fp-info-cache
LocketNfc_fw/: .cproject  .project  EvtMsgIDs.h  board.h  main.cpp
LocketNfc_fw/Audio/: AuPlayer.cpp  AuPlayer.h  SAI.cpp  SAI.h  audiomixer.h  wavreader.h
LocketNfc_fw/ESP32/: Esp32.cpp  Esp32.h  commandexchanger.cpp  commandexchanger.h  esp32flasher.cpp  esp32flasher.h  interface.h  slipcodec.h
LocketNfc_fw/kl_lib/: SAI.cpp  SAI.h
LocketNfc_fw/sd/: kl_fs_utils.cpp  kl_fs_utils.h
LocketNfc_hw/: .LocketNfc.fsxview  LocketNfc.fsproj  LocketNfc.fsx  LocketNfc.kicad_pcb  LocketNfc.kicad_prl  LocketNfc.kicad_pro  LocketNfc.kicad_sch  fp-info-cache
