idf_component_register(SRCS "kl_uart.c"
                            "main.c"
                    INCLUDE_DIRS ".")


# ### Old 
# Edit following two lines to set component requirements (see docs)
#set(COMPONENT_REQUIRES )
#set(COMPONENT_PRIV_REQUIRES )

#set(COMPONENT_SRCS "main.c")
#set(COMPONENT_ADD_INCLUDEDIRS "")

#register_component()
